compiler/tools/fpp-to-cpp/test/struct/duplicate.ref.txt
fpp-to-cpp
[ local path prefix ]/tools/fpp-to-cpp/test/struct/duplicate.fpp: 5.1
struct Duplicate { x: U32 }
^
error: duplicate C++ file DuplicateSerializableAc.hpp
previous file would be generated here:
[ local path prefix ]/tools/fpp-to-cpp/test/struct/duplicate.fpp: 2.3
  struct Duplicate { x: U32 }
  ^
